--- a/package.json
+++ b/package.json
@@ -22,15 +22,18 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
+    "@rollup/plugin-replace": "^2.3.3",
+    "dotenv": "^8.2.0",
+    "gh-pages": "^3.1.0",
     "rollup": "^2.3.4",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0",
-    "gh-pages": "^3.1.0"
+    "svelte": "^3.24.1"
   },
   "dependencies": {
-    "sirv-cli": "^1.0.0"
+    "sirv-cli": "^1.0.0",
+    "sveltestrap": "^3.7.3"
   },
   "browserslist": {
     "production": [
